# libcoda-format

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  LICENSE.md  Makefile.am  Makefile.am.coverage  Makefile.in  README.md  arg3.test.cpp  arg3fmt.pc.in  bootstrap  bootstrap.sh  configure  configure.ac  docker-compose.yml  format.cpp  format.h  format.test.cpp  package.json  premake4.lua
coverage/: index-sort-f.html  index-sort-l.html  index.html
coverage/src/: format.cpp.func-sort-c.html  format.cpp.func.html  format.cpp.gcov.html  format.h.func-sort-c.html  format.h.func.html  format.h.gcov.html  index-detail-sort-f.html  index-detail-sort-l.html  index-detail.html  index-sort-f.html  index-sort-l.html  index.html
m4/: gcov.m4
src/: CMakeLists.txt  Makefile.am  Makefile.in  config.h.in  format.cpp  format.h
tests/: CMakeLists.txt  Makefile.am  Makefile.in  format.test.cpp  main.test.cpp
